# bluerov

./: .gitmodules  PID_plotjuggler.xml  README.md  install_requirements.sh
bluerov_addons/camera_server/: CMakeLists.txt  package.xml
bluerov_addons/camera_server/config/: relay.yaml  server.yaml
bluerov_addons/camera_server/include/: CameraServerNode.hpp
bluerov_addons/camera_server/launch/: relay.launch  server.launch
bluerov_addons/camera_server/nadjieb_mjpeg_streamer/include/nadjieb/: mjpeg_streamer.hpp
bluerov_addons/camera_server/nadjieb_mjpeg_streamer/include/nadjieb/net/: publisher.hpp
bluerov_addons/camera_server/scripts/: start_gst_pipeline.sh
bluerov_addons/camera_server/src/: CameraServerNode.cpp
bluerov_addons/remote_joystick/: CMakeLists.txt  README.md  package.xml  requirements.txt
bluerov_addons/remote_joystick/config_ros/gamesir/: usb.yaml  usb_open_loop.yaml
bluerov_addons/remote_joystick/config_ros/logitech/: usb.yaml
bluerov_addons/remote_joystick/config_ros/shanwan/: usb.yaml
bluerov_addons/remote_joystick/config_ros/topics_ros/: ros.yaml
bluerov_addons/remote_joystick/launch/: remote_joystick.launch
bluerov_addons/remote_joystick/src/: RemoteControllerROSNode.py
bluerov_bringup/: CMakeLists.txt  package.xml
bluerov_bringup/config/dev_configs/: personal_ros.yaml  ros.yaml
bluerov_bringup/config/real/heavy/: addons.yaml  camera_server.yaml  control.yaml  control_backup.yaml  control_new copy.yaml  interface.yaml  mqtt.yaml  nav.yaml  process.yaml  process_backup.yaml
bluerov_bringup/config/real/regular/: control.yaml  interface.yaml  mqtt.yaml  process.yaml
bluerov_bringup/config/simulation/heavy/: control.yaml  mqtt.yaml  nav.yaml  process.yaml
bluerov_bringup/config/simulation/regular/: control.yaml  mqtt.yaml  process.yaml
bluerov_bringup/config/vehicles/bluerov_heavy/: acoustic_data.yaml  addons.yaml  bluerov_addons.yaml  comms.yaml  control.yaml  cooperative.yaml  drivers.yaml  nav.yaml  process.yaml
bluerov_bringup/launch/: bluerov_addons.launch  drivers.launch  real_tfs.launch  start_bluerov.launch  start_scenario.launch  start_vehicle.launch
bluerov_bringup/launch/dev_launch/: bluerov_interface.launch  bluerov_stabilizer.launch  gazebo_simulation.launch  medusa_stack.launch  mqtt.launch
bluerov_drivers/bluerov_drivers/: CMakeLists.txt  package.xml
bluerov_drivers/bluerov_interface/: CMakeLists.txt  package.xml  setup.py
bluerov_drivers/bluerov_interface/src/: BluerovInterfaceNode.py  __init__.py
bluerov_drivers/bluerov_interface/src/mavlink_lib/: Autopilot.py  ExtendedAutopilot.py  mavactive.py
