<?xml version="1.0"?>
<package format="2">
  <name>bluerov_bringup</name>
  <version>1.0.0</version>
  <description>The bluerov_bringup package</description>

  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>